# GraphLib

./: CMakeLists.txt  LICENSE  README.md
include/ggh/: GraphLib_global.h  graph.h  graph_lib.h
src/: graph.cpp  graph_lib.cpp
test/: CMakeLists.txt  tst_graph.cpp
